# sim-numbers

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
crates/sim-lib-numbers-ad/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-ad/recipes/: book.toml
crates/sim-lib-numbers-ad/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-ad/src/implementation/: dual.rs  scalarish.rs  tape.rs
crates/sim-lib-numbers-arith/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-arith/recipes/: book.toml
crates/sim-lib-numbers-arith/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-arith/src/implementation/: cas_route.rs  function_builders.rs  ops.rs
crates/sim-lib-numbers-bigint/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-bigint/recipes/: book.toml
crates/sim-lib-numbers-bigint/src/: implementation.rs  lib.rs  literal.rs  ops.rs  tests.rs
crates/sim-lib-numbers-bool/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-bool/recipes/: book.toml
crates/sim-lib-numbers-bool/src/: implementation.rs  lib.rs  literal.rs  tests.rs
crates/sim-lib-numbers-cas/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-cas-diff/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-cas-diff/recipes/: book.toml
crates/sim-lib-numbers-cas-diff/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-cas-diff/src/implementation/: diff.rs  (+5 more)
crates/sim-lib-numbers-cas/recipes/: book.toml
crates/sim-lib-numbers-cas/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-codec/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-codec/recipes/: book.toml
crates/sim-lib-numbers-codec/src/: lib.rs
crates/sim-lib-numbers-complex/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-complex/recipes/: book.toml
crates/sim-lib-numbers-complex/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-core/recipes/: book.toml
crates/sim-lib-numbers-core/src/: domains.rs  lib.rs  literal.rs  magnitude.rs  scalar.rs  tests.rs  value_shape.rs
crates/sim-lib-numbers-exotic/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-exotic/recipes/: book.toml
crates/sim-lib-numbers-exotic/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-f64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-f64/recipes/: book.toml
crates/sim-lib-numbers-f64/src/: implementation.rs  lib.rs  loaders.rs  native.rs
crates/sim-lib-numbers-fixed/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-fixed/recipes/: book.toml
crates/sim-lib-numbers-fixed/src/: implementation.rs  lib.rs  literal.rs  tests.rs
crates/sim-lib-numbers-float/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-float/recipes/: book.toml
crates/sim-lib-numbers-float/src/: implementation.rs  lib.rs  literal.rs  ops.rs  tests.rs
crates/sim-lib-numbers-func/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-func/recipes/: book.toml
crates/sim-lib-numbers-func/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-i64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-i64/recipes/: book.toml
crates/sim-lib-numbers-i64/src/: implementation.rs  lib.rs
crates/sim-lib-numbers-numeric/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-numeric/recipes/: book.toml
crates/sim-lib-numbers-numeric/src/: function.rs  implementation.rs  lib.rs  options.rs  pipeline.rs  pipeline_run.rs  registry.rs  runtime.rs  tests.rs  traits.rs
crates/sim-lib-numbers-prelude/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-prelude/recipes/: book.toml
crates/sim-lib-numbers-prelude/src/: lib.rs  tests.rs
crates/sim-lib-numbers-rational/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-rational/recipes/: book.toml
crates/sim-lib-numbers-rational/src/: implementation.rs  lib.rs
crates/sim-lib-numbers-rk/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-rk/recipes/: book.toml
crates/sim-lib-numbers-rk/src/: implementation.rs  lib.rs  solver.rs  support.rs  tests.rs
crates/sim-lib-numbers-stats/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-stats/recipes/: book.toml
crates/sim-lib-numbers-stats/src/: agent_fixtures.rs  claim.rs  function.rs  implementation.rs  lib.rs  runtime.rs  tests.rs
crates/sim-lib-numbers-tensor/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-bcast/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-bcast/recipes/: book.toml
crates/sim-lib-numbers-tensor-bcast/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-tensor-bit/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-bit/recipes/: book.toml
crates/sim-lib-numbers-tensor-bit/src/: bit_tensor.rs  lib.rs
crates/sim-lib-numbers-tensor-cmplxf/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-cmplxf/recipes/: book.toml
crates/sim-lib-numbers-tensor-cmplxf/src/: lib.rs
crates/sim-lib-numbers-tensor-f64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-f64/recipes/: book.toml
crates/sim-lib-numbers-tensor-f64/src/: lib.rs  tests.rs
crates/sim-lib-numbers-tensor-half/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-half/recipes/: book.toml
crates/sim-lib-numbers-tensor-half/src/: descriptor.rs  half_tensor.rs  lib.rs  tests.rs
crates/sim-lib-numbers-tensor-i64/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-i64/recipes/: book.toml
crates/sim-lib-numbers-tensor-i64/src/: lib.rs  tests.rs
crates/sim-lib-numbers-tensor-linalg/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-numbers-tensor-linalg/recipes/: book.toml
crates/sim-lib-numbers-tensor-linalg/src/: implementation.rs  lib.rs  tests.rs
crates/sim-lib-numbers-tensor/recipes/: book.toml
crates/sim-lib-numbers-tensor/src/: implementation.rs  lib.rs  spec.rs  tests.rs
(+224 files in other folders)
