[package]
name = "sim-lib-numbers-ad"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Forward and reverse automatic-differentiation primitives for SIM numeric code."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
