[package]
name = "sim-lib-numbers-arith"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Cross-domain arithmetic dispatch over the SIM number promotion lattice."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-shape = { version = "0.1.0" }

[dev-dependencies]
sim-lib-numbers-bigint = { version = "0.1.0", path = "../sim-lib-numbers-bigint" }
sim-lib-numbers-f64 = { version = "0.1.0", path = "../sim-lib-numbers-f64" }
sim-lib-numbers-i64 = { version = "0.1.0", path = "../sim-lib-numbers-i64" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
