[package]
name = "sim-lib-numbers-bool"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Boolean number domain with literal parsing and promotion into scalar numeric domains."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-citizen-derive = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-shape = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
