[package]
name = "sim-lib-numbers-codec"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Numeric plugin descriptor helpers for advertising SIM number methods and codecs."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }

[lints]
workspace = true

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
