[package]
name = "sim-lib-numbers-core"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Shared scalar-domain substrate: number-value shapes, literal classes, op installers, and promotion metadata."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-shape = { version = "0.1.0" }

[dev-dependencies]
sim-value = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
