[package]
name = "sim-lib-numbers-exotic"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Continued-fraction and exact-real helpers for the SIM number stack."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
num-bigint = "0.5"
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-shape = { version = "0.1.0" }

[dev-dependencies]
sim-lib-numbers-arith = { version = "0.1.0", path = "../sim-lib-numbers-arith" }
sim-lib-numbers-f64 = { version = "0.1.0", path = "../sim-lib-numbers-f64" }
sim-lib-numbers-i64 = { version = "0.1.0", path = "../sim-lib-numbers-i64" }
sim-lib-numbers-rational = { version = "0.1.0", path = "../sim-lib-numbers-rational" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
