[package]
name = "sim-lib-numbers-f64"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Double-precision float number domain with arithmetic and complex promotion."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
native-export = ["dep:sim-codec-binary", "dep:sim-macros"]

[dependencies]
sim-citizen-derive = { version = "0.1.0" }
sim-codec-binary = { version = "0.1.0", optional = true }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-macros = { version = "0.1.0", optional = true }
sim-shape = { version = "0.1.0" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
