[package]
name = "sim-lib-numbers-numeric"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib numbers numeric."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-cas = { version = "0.1.0", path = "../sim-lib-numbers-cas" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-lib-numbers-f64 = { version = "0.1.0", path = "../sim-lib-numbers-f64" }
sim-lib-numbers-func = { version = "0.1.0", path = "../sim-lib-numbers-func" }

[dev-dependencies]
sim-lib-numbers-arith = { version = "0.1.0", path = "../sim-lib-numbers-arith" }
sim-lib-numbers-cas-diff = { version = "0.1.0", path = "../sim-lib-numbers-cas-diff" }
sim-lib-numbers-cas-eval = { version = "0.1.0", path = "../sim-lib-numbers-cas-eval" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
