[package]
name = "sim-lib-numbers-stats"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Statistical and probability helpers for the SIM number stack."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }

[lints]
workspace = true
