[package]
name = "sim-lib-numbers-tensor-bit"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim lib numbers tensor bit."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-tensor = { version = "0.1.0", path = "../sim-lib-numbers-tensor" }
