[package]
name = "sim-lib-numbers-tensor-cmplxf"
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
description = "Complex f64-pair tensor specialization for SIM tensor values."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-tensor = { version = "0.1.0", path = "../sim-lib-numbers-tensor" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
