[package]
name = "sim-lib-numbers-tensor-i64"
version = "0.1.2"
edition = "2024"
license = "MPL-2.0"
description = "Contiguous i64 tensor specialization with overflow-aware arithmetic."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-tensor = { version = "0.1.4", path = "../sim-lib-numbers-tensor" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
