[package]
name = "sim-lib-numbers-tensor-linalg"
version = "0.1.3"
edition = "2024"
license = "MPL-2.0"
description = "Linear algebra operations for SIM tensors: dot, matrix multiply, inversion, norms, and constructors."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-lib-numbers-tensor = { version = "0.1.4", path = "../sim-lib-numbers-tensor" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-lib-numbers-arith = { version = "0.1.0", path = "../sim-lib-numbers-arith" }
sim-lib-numbers-cas = { version = "0.1.0", path = "../sim-lib-numbers-cas" }
sim-lib-numbers-i64 = { version = "0.1.0", path = "../sim-lib-numbers-i64" }
sim-lib-numbers-tensor-bcast = { version = "0.1.3", path = "../sim-lib-numbers-tensor-bcast" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
