[package]
name = "sim-lib-numbers-tensor"
version = "0.1.4"
edition = "2024"
license = "MPL-2.0"
description = "Uniform n-dimensional tensor value, constructors, and specialization hooks for SIM numbers."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-numbers"
homepage = "https://github.com/sim-nest/sim-numbers"

[dependencies]
half = { version = "2" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-numbers-core = { version = "0.1.0", path = "../sim-lib-numbers-core" }
sim-shape = { version = "0.1.0" }

[dev-dependencies]
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-lib-numbers-arith = { version = "0.1.0", path = "../sim-lib-numbers-arith" }
sim-lib-numbers-float = { version = "0.1.0", path = "../sim-lib-numbers-float" }
sim-lib-numbers-f64 = { version = "0.1.0", path = "../sim-lib-numbers-f64" }
sim-lib-numbers-i64 = { version = "0.1.0", path = "../sim-lib-numbers-i64" }
sim-lib-numbers-rational = { version = "0.1.0", path = "../sim-lib-numbers-rational" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }
